--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="./styles/style.css">
 </head>
-<body>
+<body class="wrapper">
     <div id="game-board"></div>
 </body>
 <script src="./scripts/app.js"></script>
